--- a/index.html
+++ b/index.html
@@ -127,11 +127,74 @@
       </div>
     </section>
 
-    <section id="menu" class="container-fluid">
-      <h2>Our Menu</h2>
-      <p>Explore our variety of delicious dishes and drinks.</p> <br>
-      <h3>Today's Chef's Special</h3>
-      <img src="menu.jpg" alt="menu" style="height: fit-content; width: 350px; margin-left: 0px;">
+    <section id="menu" class="container-fluid py-5">
+      <h2 class="text-center mb-4">Our Menu Highlights 📜</h2>
+      <p class="text-center mb-4">Here's a glimpse of some of the scrumptious offerings on our menu:</p>
+
+      <!-- Menu Grid -->
+      <div class="row justify-content-center">
+        <!-- Burgers & Sandwiches -->
+        <div class="col-md-4 mb-4">
+          <h4 class="text-primary">🍔 Burgers & Sandwiches</h4>
+          <ul class="list-unstyled">
+            <li>Classic Burger</li>
+            <li>Chilli Chicken Burger</li>
+            <li>Potato Cheese Burger</li>
+            <li>Grilled Sandwich</li>
+            <li>Mexican Paneer Sandwich</li>
+            <li>Mayo Grilled Sandwich</li>
+          </ul>
+        </div>
+
+        <!-- Rice Specials -->
+        <div class="col-md-4 mb-4">
+          <h4 class="text-success">🍲 Rice Specials</h4>
+          <ul class="list-unstyled">
+            <li>Chicken Fried Rice</li>
+            <li>Spicy Paneer Rice</li>
+            <li>Aloo Tikki Rice Special</li>
+          </ul>
+        </div>
+
+        <!-- Soups & Noodles -->
+        <div class="col-md-4 mb-4">
+          <h4 class="text-danger">🍲 Soups & Noodles</h4>
+          <ul class="list-unstyled">
+            <li>Veg Manchow Soup</li>
+            <li>Schezwan Chicken Noodles</li>
+            <li>Crumbly Cheese Noodles</li>
+          </ul>
+        </div>
+
+        <!-- Wraps & Rolls -->
+        <div class="col-md-4 mb-4">
+          <h4 class="text-warning">🌯 Wraps & Rolls</h4>
+          <ul class="list-unstyled">
+            <li>Veg Cheese Maggi Wrap</li>
+            <li>Spicy Paneer Wrap</li>
+            <li>Classic Fries and Peri-Peri Fries</li>
+          </ul>
+        </div>
+
+        <!-- BBQ & Grills -->
+        <div class="col-md-4 mb-4">
+          <h4 class="text-primary">🔥 BBQ & Grills</h4>
+          <ul class="list-unstyled">
+            <li>Spicy Paneer BBQ Deal</li>
+            <li>Chicken Leg Combo</li>
+            <li>Chicken Breast Specials</li>
+          </ul>
+        </div>
+
+        <!-- Combo Deals -->
+        <div class="col-md-4 mb-4">
+          <h4 class="text-info">🥤 Combo Deals</h4>
+          <ul class="list-unstyled">
+            <li>Budy Box Veg Deal</li>
+            <li>Budy Box Chicken Deal</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <section id="order" class="order-section" style="border: 2px solid black;">
@@ -233,9 +296,6 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
-
-
     </section>
 
     <section id="about-us">
@@ -271,13 +331,33 @@
         coffee, <strong>Perfectus</strong> offers a cozy and vibrant atmosphere</p>
     </section>
 
+    <section id="contact" class="container-fluid py-5">
+      <h2 class="text-center mb-4">Contact Us</h2>
+      <p class="text-center">Address: Hospital Road, near IRS Path Lab, Pragati Nagar, Bhoop Narayan Singh Colony,
+        Madhubani, Bihar 847211</p>
+      <p class="text-center">Phone: <a href="tel:+917250327478" class="text-decoration-none text-primary">+91
+          7250327478</a></p>
 
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <p>Address: Hospital raod, near IRS Path lab, Pragati Nagar, Bhoop Narayan Singh Colony, Madhubani, Bihar 847211
-      </p>
-      <p>Phone: +91 7250327478</p>
+      <div class="d-flex flex-wrap justify-content-center mt-4">
+        <a href="tel:+917250327478"
+          class="btn btn-primary btn-lg mx-2 mb-3 desktop-btn d-flex align-items-center justify-content-center">
+          <i class="bi bi-telephone-fill me-2"></i> Call Now
+        </a>
+        <a href="https://wa.me/917250327478" target="_blank"
+          class="btn btn-success btn-lg mx-2 mb-3 desktop-btn d-flex align-items-center justify-content-center">
+          <i class="bi bi-whatsapp me-2"></i> WhatsApp Now
+        </a>
+        <a href="https://instagram.com/yourprofile" target="_blank"
+          class="btn btn-danger btn-lg mx-2 mb-3 desktop-btn d-flex align-items-center justify-content-center">
+          <i class="bi bi-instagram me-2"></i> Follow on Instagram
+        </a>
+        <a href="mailto:perfectusfoods@gmail.com"
+          class="btn btn-secondary btn-lg mx-2 mb-3 desktop-btn d-flex align-items-center justify-content-center">
+          <i class="bi bi-envelope-fill me-2"></i> Mail Us
+        </a>
+      </div>
     </section>
+    
   </main>
 
 
