--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfectus Cafe</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <!-- Bootstrap CSS (in the <head> section) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap JS & Popper.js (at the end of the <body> section) -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
@@ -42,7 +41,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">Home</a>
+                <a class="nav-link" href="#home" target="_blank">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#menu">Menu</a>
@@ -50,6 +49,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="#order">Order Now</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#myCart" id="myCartBtn">My Cart <span id="cartCount">(0)</span></a>
+              </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="#gallery">Gallery</a>
               </li>
@@ -127,6 +130,7 @@
       </div>
     </section>
 
+    <!-- Menu Section -->
     <section id="menu" class="container-fluid py-5">
       <h2 class="text-center mb-4">Our Menu Highlights 📜</h2>
       <p class="text-center mb-4">Here's a glimpse of some of the scrumptious offerings on our menu:</p>
@@ -137,12 +141,54 @@
         <div class="col-md-4 mb-4">
           <h4 class="text-primary">🍔 Burgers & Sandwiches</h4>
           <ul class="list-unstyled">
-            <li>Classic Burger</li>
-            <li>Chilli Chicken Burger</li>
-            <li>Potato Cheese Burger</li>
-            <li>Grilled Sandwich</li>
-            <li>Mexican Paneer Sandwich</li>
-            <li>Mayo Grilled Sandwich</li>
+            <li>
+              Classic Burger
+              <span id="count-ClassicBurger" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Classic Burger', 200, 'count-ClassicBurger')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Chilli Chicken Burger
+              <span id="count-ChilliChickenBurger" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Chilli Chicken Burger', 250, 'count-ChilliChickenBurger')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Potato Cheese Burger
+              <span id="count-PotatoCheeseBurger" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Potato Cheese Burger', 180, 'count-PotatoCheeseBurger')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Grilled Sandwich
+              <span id="count-GrilledSandwich" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Grilled Sandwich', 150, 'count-GrilledSandwich')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Mexican Paneer Sandwich
+              <span id="count-MexicanPaneerSandwich" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Mexican Paneer Sandwich', 170, 'count-MexicanPaneerSandwich')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Mayo Grilled Sandwich
+              <span id="count-MayoGrilledSandwich" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Mayo Grilled Sandwich', 160, 'count-MayoGrilledSandwich')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
           </ul>
         </div>
 
@@ -150,9 +196,30 @@
         <div class="col-md-4 mb-4">
           <h4 class="text-success">🍲 Rice Specials</h4>
           <ul class="list-unstyled">
-            <li>Chicken Fried Rice</li>
-            <li>Spicy Paneer Rice</li>
-            <li>Aloo Tikki Rice Special</li>
+            <li>
+              Chicken Fried Rice
+              <span id="count-ChickenFriedRice" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Chicken Fried Rice', 220, 'count-ChickenFriedRice')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Spicy Paneer Rice
+              <span id="count-SpicyPaneerRice" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Spicy Paneer Rice', 200, 'count-SpicyPaneerRice')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Aloo Tikki Rice Special
+              <span id="count-AlooTikkiRiceSpecial" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Aloo Tikki Rice Special', 190, 'count-AlooTikkiRiceSpecial')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
           </ul>
         </div>
 
@@ -160,9 +227,30 @@
         <div class="col-md-4 mb-4">
           <h4 class="text-danger">🍲 Soups & Noodles</h4>
           <ul class="list-unstyled">
-            <li>Veg Manchow Soup</li>
-            <li>Schezwan Chicken Noodles</li>
-            <li>Crumbly Cheese Noodles</li>
+            <li>
+              Veg Manchow Soup
+              <span id="count-VegManchowSoup" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Veg Manchow Soup', 150, 'count-VegManchowSoup')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Schezwan Chicken Noodles
+              <span id="count-SchezwanChickenNoodles" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Schezwan Chicken Noodles', 220, 'count-SchezwanChickenNoodles')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Crumbly Cheese Noodles
+              <span id="count-CrumblyCheeseNoodles" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Crumbly Cheese Noodles', 200, 'count-CrumblyCheeseNoodles')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
           </ul>
         </div>
 
@@ -170,9 +258,30 @@
         <div class="col-md-4 mb-4">
           <h4 class="text-warning">🌯 Wraps & Rolls</h4>
           <ul class="list-unstyled">
-            <li>Veg Cheese Maggi Wrap</li>
-            <li>Spicy Paneer Wrap</li>
-            <li>Classic Fries and Peri-Peri Fries</li>
+            <li>
+              Veg Cheese Maggi Wrap
+              <span id="count-VegCheeseMaggiWrap" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Veg Cheese Maggi Wrap', 180, 'count-VegCheeseMaggiWrap')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Spicy Paneer Wrap
+              <span id="count-SpicyPaneerWrap" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Spicy Paneer Wrap', 190, 'count-SpicyPaneerWrap')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Classic Fries and Peri-Peri Fries
+              <span id="count-ClassicFries" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Classic Fries and Peri-Peri Fries', 150, 'count-ClassicFries')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
           </ul>
         </div>
 
@@ -180,9 +289,30 @@
         <div class="col-md-4 mb-4">
           <h4 class="text-primary">🔥 BBQ & Grills</h4>
           <ul class="list-unstyled">
-            <li>Spicy Paneer BBQ Deal</li>
-            <li>Chicken Leg Combo</li>
-            <li>Chicken Breast Specials</li>
+            <li>
+              Spicy Paneer BBQ Deal
+              <span id="count-SpicyPaneerBBQ" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Spicy Paneer BBQ Deal', 300, 'count-SpicyPaneerBBQ')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Chicken Leg Combo
+              <span id="count-ChickenLeg" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Chicken Leg Combo', 350, 'count-ChickenLeg')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Chicken Breast Specials
+              <span id="count-ChickenBreast" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Chicken Breast Specials', 400, 'count-ChickenBreast')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
           </ul>
         </div>
 
@@ -190,12 +320,109 @@
         <div class="col-md-4 mb-4">
           <h4 class="text-info">🥤 Combo Deals</h4>
           <ul class="list-unstyled">
-            <li>Budy Box Veg Deal</li>
-            <li>Budy Box Chicken Deal</li>
+            <li>
+              Budy Box Veg Deal
+              <span id="count-BudyBoxVeg" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Budy Box Veg Deal', 250, 'count-BudyBoxVeg')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
+            <li>
+              Budy Box Chicken Deal
+              <span id="count-BudyBoxChicken" class="badge bg-primary ms-2">0</span>
+              <button class="btn btn-sm btn-success ms-2"
+                onclick="addToCart('Budy Box Chicken Deal', 300, 'count-BudyBoxChicken')">
+                <i class="bi bi-plus"></i>
+              </button>
+            </li>
           </ul>
         </div>
+
       </div>
     </section>
+
+
+    <!-- Visit Cart and Hide Cart Buttons -->
+    <div class="text-center my-4">
+      <button id="visitCartBtn" class="btn btn-primary">Visit Cart</button>
+      <button id="hideCartBtn" class="btn btn-secondary">Hide Cart</button>
+    </div>
+
+
+    <!-- My Cart Section -->
+    <section id="myCart" class="container-fluid py-5 d-none">
+      <h2 class="text-center mb-4">My Cart 🛒</h2>
+      <div id="cartItems"></div>
+      <hr>
+      <div class="d-flex justify-content-between">
+        <strong>Total Amount:</strong>
+        <span id="totalAmount">0</span>
+      </div>
+
+      <div class="text-center mt-3">
+        <button class="btn btn-success" onclick="showDeliveryModal()">Place Order</button>
+      </div>
+    </section>
+
+    <!-- Cart Modal -->
+    <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="cartModalLabel">My Cart</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div id="cartItemsModal"></div>
+            <hr>
+            <div class="d-flex justify-content-between">
+              <strong>Total Amount:</strong>
+              <span id="totalAmountModal">0</span>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-success" onclick="showDeliveryModal()">Place Order</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Delivery Details Modal -->
+    <div class="modal fade" id="deliveryDetailsModal" tabindex="-1" aria-labelledby="deliveryDetailsModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deliveryDetailsModalLabel">Enter Delivery Details</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="deliveryForm">
+              <div class="mb-3">
+                <label for="receiverName" class="form-label">Receiver's Name</label>
+                <input type="text" class="form-control" id="receiverName" required>
+              </div>
+              <div class="mb-3">
+                <label for="mobileNumber" class="form-label">Mobile Number</label>
+                <input type="tel" class="form-control" id="mobileNumber" pattern="^\d{10}$" required
+                  title="Please enter a valid 10-digit mobile number">
+              </div>
+              <div class="mb-3">
+                <label for="deliveryAddress" class="form-label">Delivery Address</label>
+                <textarea class="form-control" id="deliveryAddress" rows="3" required></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-success" id="confirmOrderBtn" onclick="placeOrder()">Confirm
+              Order</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <section id="order" class="order-section" style="border: 2px solid black;">
       <h2>Order Now</h2>
@@ -357,7 +584,7 @@
         </a>
       </div>
     </section>
-    
+
   </main>
 
 
@@ -374,7 +601,15 @@
   </div>
 
 
+  <!-- Popper.js (required by Bootstrap 5 for modal, tooltips, popovers) -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
+  <!-- Bootstrap 5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
+  <!-- Your Custom JavaScript -->
   <script src="script.js"></script>
+
 
 </body>
 
