--- a/index.html
+++ b/index.html
@@ -130,217 +130,14 @@
       </div>
     </section>
 
-    <!-- Menu Section -->
-    <section id="menu" class="container-fluid py-5">
-      <h2 class="text-center mb-4">Our Menu Highlights 📜</h2>
-      <p class="text-center mb-4">Here's a glimpse of some of the scrumptious offerings on our menu:</p>
+<!-- Menu Section -->
+<section id="menu" class="container-fluid py-5">
+  <h2 class="text-center mb-4">Our Menu Highlights 📜</h2>
+  <p class="text-center mb-4">Here's a glimpse of some of the scrumptious offerings on our menu:</p>
+  <!-- Menu Grid will be dynamically populated -->
+  <div id="menu-grid" class="row justify-content-center"></div>
+</section>
 
-      <!-- Menu Grid -->
-      <div class="row justify-content-center">
-        <!-- Burgers & Sandwiches -->
-        <div class="col-md-4 mb-4">
-          <h4 class="text-primary">🍔 Burgers & Sandwiches</h4>
-          <ul class="list-unstyled">
-            <li>
-              Classic Burger
-              <span id="count-ClassicBurger" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Classic Burger', 200, 'count-ClassicBurger')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Chilli Chicken Burger
-              <span id="count-ChilliChickenBurger" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Chilli Chicken Burger', 250, 'count-ChilliChickenBurger')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Potato Cheese Burger
-              <span id="count-PotatoCheeseBurger" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Potato Cheese Burger', 180, 'count-PotatoCheeseBurger')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Grilled Sandwich
-              <span id="count-GrilledSandwich" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Grilled Sandwich', 150, 'count-GrilledSandwich')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Mexican Paneer Sandwich
-              <span id="count-MexicanPaneerSandwich" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Mexican Paneer Sandwich', 170, 'count-MexicanPaneerSandwich')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Mayo Grilled Sandwich
-              <span id="count-MayoGrilledSandwich" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Mayo Grilled Sandwich', 160, 'count-MayoGrilledSandwich')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Rice Specials -->
-        <div class="col-md-4 mb-4">
-          <h4 class="text-success">🍲 Rice Specials</h4>
-          <ul class="list-unstyled">
-            <li>
-              Chicken Fried Rice
-              <span id="count-ChickenFriedRice" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Chicken Fried Rice', 220, 'count-ChickenFriedRice')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Spicy Paneer Rice
-              <span id="count-SpicyPaneerRice" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Spicy Paneer Rice', 200, 'count-SpicyPaneerRice')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Aloo Tikki Rice Special
-              <span id="count-AlooTikkiRiceSpecial" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Aloo Tikki Rice Special', 190, 'count-AlooTikkiRiceSpecial')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Soups & Noodles -->
-        <div class="col-md-4 mb-4">
-          <h4 class="text-danger">🍲 Soups & Noodles</h4>
-          <ul class="list-unstyled">
-            <li>
-              Veg Manchow Soup
-              <span id="count-VegManchowSoup" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Veg Manchow Soup', 150, 'count-VegManchowSoup')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Schezwan Chicken Noodles
-              <span id="count-SchezwanChickenNoodles" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Schezwan Chicken Noodles', 220, 'count-SchezwanChickenNoodles')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Crumbly Cheese Noodles
-              <span id="count-CrumblyCheeseNoodles" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Crumbly Cheese Noodles', 200, 'count-CrumblyCheeseNoodles')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Wraps & Rolls -->
-        <div class="col-md-4 mb-4">
-          <h4 class="text-warning">🌯 Wraps & Rolls</h4>
-          <ul class="list-unstyled">
-            <li>
-              Veg Cheese Maggi Wrap
-              <span id="count-VegCheeseMaggiWrap" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Veg Cheese Maggi Wrap', 180, 'count-VegCheeseMaggiWrap')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Spicy Paneer Wrap
-              <span id="count-SpicyPaneerWrap" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Spicy Paneer Wrap', 190, 'count-SpicyPaneerWrap')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Classic Fries and Peri-Peri Fries
-              <span id="count-ClassicFries" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Classic Fries and Peri-Peri Fries', 150, 'count-ClassicFries')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-          </ul>
-        </div>
-
-        <!-- BBQ & Grills -->
-        <div class="col-md-4 mb-4">
-          <h4 class="text-primary">🔥 BBQ & Grills</h4>
-          <ul class="list-unstyled">
-            <li>
-              Spicy Paneer BBQ Deal
-              <span id="count-SpicyPaneerBBQ" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Spicy Paneer BBQ Deal', 300, 'count-SpicyPaneerBBQ')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Chicken Leg Combo
-              <span id="count-ChickenLeg" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Chicken Leg Combo', 350, 'count-ChickenLeg')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Chicken Breast Specials
-              <span id="count-ChickenBreast" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Chicken Breast Specials', 400, 'count-ChickenBreast')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Combo Deals -->
-        <div class="col-md-4 mb-4">
-          <h4 class="text-info">🥤 Combo Deals</h4>
-          <ul class="list-unstyled">
-            <li>
-              Budy Box Veg Deal
-              <span id="count-BudyBoxVeg" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Budy Box Veg Deal', 250, 'count-BudyBoxVeg')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-            <li>
-              Budy Box Chicken Deal
-              <span id="count-BudyBoxChicken" class="badge bg-primary ms-2">0</span>
-              <button class="btn btn-sm btn-success ms-2"
-                onclick="addToCart('Budy Box Chicken Deal', 300, 'count-BudyBoxChicken')">
-                <i class="bi bi-plus"></i>
-              </button>
-            </li>
-          </ul>
-        </div>
-
-      </div>
-    </section>
 
 
     <!-- Visit Cart and Hide Cart Buttons -->
