--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
           class="btn btn-success btn-lg mx-2 mb-3 desktop-btn d-flex align-items-center justify-content-center">
           <i class="bi bi-whatsapp me-2"></i> WhatsApp Now
         </a>
-        <a href="https://instagram.com/yourprofile" target="_blank"
+        <a href="https://instagram.com/yourprofile" href="https://www.instagram.com/perfectus_india/profilecard/?igsh=MTJzM3hqbGtyZmY4YQ==" target="_blank"
           class="btn btn-danger btn-lg mx-2 mb-3 desktop-btn d-flex align-items-center justify-content-center">
           <i class="bi bi-instagram me-2"></i> Follow on Instagram
         </a>
