--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
       <p class="text-center mb-4">
         <em id="dynamic-menu-text" class="text-primary fixed-effect"></em>
       </p>
-     <h5 style="background-color: whitesmoke;"> Use  <button class="btn btn-sm btn-success ms-2"
-     <i class="bi bi-plus">+</i>
-    </button> & <button class="btn btn-sm btn-warning ms-2><i class="bi bi-dash">-</i></button> button to add or remove items from your cart</h5>
+     <em><h5 style="background-color: whitesmoke;"> Use  <button class="btn btn-sm btn-success ms-2"
+      <i class="bi bi-plus">+</i>
+     </button> & <button class="btn btn-sm btn-warning ms-2><i class="bi bi-dash">-</i></button> button to add or remove items from your cart</h5></em>
       <!-- Menu Grid will be dynamically populated -->
       <div id="menu-grid" class="row justify-content-center"></div>
     </section>
