--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
       <h2>Gallery</h2> <hr>
       <p>Visual experience of our cafe and food...</p> -->
     <section id="gallery" class="container-fluid py-5">
-      <div class="gl"
-        style="border: 0.5px solid #ccc; padding: 20px; background-color: antiquewhite; border-radius: 5px; opacity: 0.8;">
+      <div class="gl">
+        <!-- style="border: 0.5px solid #ccc; padding: 20px; background-color: antiquewhite; border-radius: 5px; opacity: 0.8;" -->
         <h2>Gallery</h2>
         <hr>
         <!-- Dynamic Typing Effect for Gallery Highlights -->
