--- a/index.html
+++ b/index.html
@@ -110,19 +110,6 @@
   </header>
 
   <main class="container-fluid">
-    <!-- <section id="home" class="container-fluid">
-      <div class="container text-center my-5">
-        <h2 class="mb-4">Welcome to Perfectus!</h2> <hr>
-        <p class="lead">
-          <em>"Savor the taste of perfection — where every bite is a delight, every moment a memory, and every
-            experience unforgettable."</em>
-        </p>
-        <p class="mt-4">
-          We bring passion and taste together to create dishes you'll love and cherish.
-        </p>
-      </div>
-    </section> -->
-    <!-- Welcome section  -->
     <section id="home" class="container-fluid">
       <div class="container text-center my-5">
         <h2 class="mb-4">Welcome to Perfectus!</h2>
@@ -136,13 +123,8 @@
         </p>
       </div>
     </section>
+
     <!-- Menu Section -->
-    <!-- <section id="menu" class="container-fluid py-5">
-  <h2 class="text-center mb-4">Our Menu Highlights 📜</h2> <hr>
-  <p class="text-center mb-4">Here's a glimpse of some of the scrumptious offerings on our menu:</p>
-  Menu Grid will be dynamically populated
-  <div id="menu-grid" class="row justify-content-center"></div>
-</section> -->
 
     <section id="menu" class="container-fluid py-5">
       <h2 class="text-center mb-4" id="menu-title">Our Menu Highlights 📜</h2>
@@ -151,9 +133,9 @@
       <p class="text-center mb-4">
         <em id="dynamic-menu-text" class="text-primary fixed-effect"></em>
       </p>
-     <em><h5 style="background-color: whitesmoke;"> Use  <button class="btn btn-sm btn-success ms-2"
+     <em><h5 style="display: inline;"> Use  <button class="btn btn-sm btn-success ms-2"
       <i class="bi bi-plus">+</i>
-     </button> & <button class="btn btn-sm btn-warning ms-2><i class="bi bi-dash">-</i></button> button to add or remove items from your cart</h5></em>
+     </button> & <button class="btn btn-sm btn-warning ms-2><i class="bi bi-dash">-</i></button> button to add or remove items for your cart</h5></em>
       <!-- Menu Grid will be dynamically populated -->
       <div id="menu-grid" class="row justify-content-center"></div>
     </section>
@@ -237,9 +219,9 @@
       </div>
     </div>
 
-    <!-- <section id="order" class="order-section" style="border: 2px solid black;">
-      <h2>Order Now</h2> <hr> -->
-    <section id="order" class="order-section" style="border: 2px solid black; padding: 20px; opacity: 0.8;">
+<!-- Order Now Starts from here  -->
+    <section id="order" class="order-section">
+      <!-- style="border: 2px solid black; padding: 20px; opacity: 0.8;" -->
       <h2>Order Now</h2>
       <hr>
 
@@ -270,9 +252,8 @@
       </div>
     </section>
 
-    <!-- <section id="gallery" class="container-fluid">
-      <h2>Gallery</h2> <hr>
-      <p>Visual experience of our cafe and food...</p> -->
+<!-- Gallery Starts from here  -->
+
     <section id="gallery" class="container-fluid py-5">
       <div class="gl">
         <!-- style="border: 0.5px solid #ccc; padding: 20px; background-color: antiquewhite; border-radius: 5px; opacity: 0.8;" -->
@@ -359,7 +340,8 @@
     <!-- About Us Section Starts from here  -->
 
     <section id="about-us">
-      <h2>About Us</h2>
+      <div class="about">
+        <h2>About Us</h2>
       <hr>
       <p>Perfectus Cafe offers the best <strong>Momos</strong> and <strong>Burgers</strong> in town.</p>
       <p><strong>Our Focus are as follow: </strong> <br><em id="dynamic-about-text"
@@ -395,6 +377,7 @@
       <p><strong>Perfectus</strong> isn’t just a cafe — it’s a gathering place for friends, families, and food
         enthusiasts. Whether you're looking to grab a quick meal, celebrate with a combo deal, or just sip on some
         coffee, <strong>Perfectus</strong> offers a cozy and vibrant atmosphere.</p>
+      </div>
     </section>
 
     <!-- <section id="contact" class="container-fluid py-5">
