--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 <body>
 
   <header class="container-fluid">
-    <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+    <!-- bg-dark  of Nav bar -->
+    <nav class="navbar navbar-dark fixed-top navbar-expand-md" style="background-color: rgb(0, 0, 0);">
       </div>
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="index.html" style="color: #ffa405;">
           <img src="Perfectus Logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
           Perfectus
         </a>
